data/derived/fa15/progs/unify/prog3115.ml.out
Characters 85-96:
  | hd::tl -> cout(hd, i) @ mulByDigit i tl in
              ^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
